Set up for new design

--- a/src/pages/footer/Footer.css
+++ b/src/pages/footer/Footer.css
@@ -1,8 +1,67 @@
-.f {
-  /* display: flex;
-  justify-content: center; */
-  padding: 20px 40px;
+/* .f {
   text-align: center;
-  font-size: 12px;
-  background-color: #1a5d1a;
+  font-size: 15px;
+  background-color: #104924;
+  color: white;
+} */
+
+.footer {
+  background-color: #104924; /* Dark green background */
+  color: #fff; /* White text color */
+  padding: 20px;
+  text-align: center;
+  flex-direction: column;
+}
+
+.footer-online {
+  margin-bottom: 20px; /* Space below the 'Online dal 1998' text */
+  font-weight: bold; /* Make the text bold */
+}
+
+.footer-main {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 20px; /* Space below the main content row */
+}
+
+.footer-logo img {
+  max-width: 100px; /* Maximum width of the logo image */
+  height: auto; /* Maintain aspect ratio */
+}
+
+.footer-contact p {
+  margin: 5px 0; /* Small margin between contact lines */
+}
+
+.footer-social a {
+  display: inline-block; /* Align the icons inline */
+  margin: 0 10px; /* Spacing between icons */
+}
+
+.footer-social img {
+  width: 30px; /* Width of the social media icons */
+  height: 30px; /* Height of the social media icons */
+}
+
+.footer-bottom {
+  margin-top: 20px; /* Space above the bottom content */
+  font-size: 0.8em; /* Smaller font size for additional content */
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  .footer-main {
+    flex-direction: column;
+  }
+
+  .footer-logo,
+  .footer-contact,
+  .footer-social {
+    margin: 10px 0; /* Adds vertical padding and removes horizontal padding */
+  }
+
+  .footer-social a {
+    margin: 5px;
+  }
 }
