--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -1,14 +1,9 @@
 .c {
   min-height: 100vh;
   position: relative;
-  background-image: url("../../assets/bg.png");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  color: black;
+  overflow: hidden;
 }
 .c-wrapper {
   display: flex;
   justify-content: center;
-  padding-top: 50px;
 }
