--- a/src/pages/navigation/Navigation.css
+++ b/src/pages/navigation/Navigation.css
@@ -3,7 +3,17 @@
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  background-color: #1a5d1a;
+  position: fixed; /* Changed from sticky to fixed */
+  top: 0; /* Align to the top of the viewport */
+  left: 0; /* Align to the left of the viewport */
+  right: 0; /* Stretch across the full viewport width */
+  z-index: 1000; /* Ensure it's above other content */
+  height: 90px;
+  transition: height 0.3s ease, background-color 0.3s ease; /* Add background-color to the transition */
+  background-color: rgba(255, 255, 255, 1);
+}
+.navbar.shrink {
+  height: 50px; /* Reduced height when scrolled */
 }
 .logo img {
   width: 80px;
@@ -11,16 +21,21 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  transition: width 0.3s ease, height 0.3s ease;
 }
-
+.logo.shrink-logo img {
+  width: 50px; /* Reduced size when scrolled */
+  height: 50px; /* Adjust height proportionally */
+}
 .links {
   font-size: 18px;
-  font-weight: bold;
   display: flex;
   align-items: center;
 }
 .link {
-  color: white;
   text-decoration: none;
   padding: 10px 20px;
+}
+.link:hover {
+  color: #56a635;
 }
