--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -4,6 +4,55 @@
   overflow: hidden;
 }
 .c-wrapper {
+  padding: 100px 0 50px 0;
   display: flex;
+  flex-direction: column;
+  align-items: center; /* Center horizontally within the .c-wrapper */
   justify-content: center;
+  text-align: center;
+}
+
+form {
+  width: 50%; /* Set the form width to 50% of the .c-wrapper width */
+  max-width: 400px; /* You can adjust the maximum width as needed */
+}
+
+input {
+  width: 100%;
+  height: 50px;
+  border: none;
+  border-bottom: 1px solid black;
+  margin: 10px 0px;
+  font-size: 15px;
+  padding-left: 10px;
+  outline: none;
+}
+
+textarea {
+  width: 100%;
+  margin: 10px 0px;
+  font-size: 15px;
+  padding-left: 10px;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid black;
+}
+
+/* Button style */
+
+.c-wrapper button {
+  background-color: #56a635; /* Initial color */
+  color: black;
+  border: none;
+  padding: 10px 10px;
+  border-radius: 20px;
+  font-size: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Smooth transition on hover */
+}
+
+/* Hover effect */
+.c-wrapper button:hover {
+  background-color: #104924;
+  color: white;
 }
