--- a/src/pages/products/Products.css
+++ b/src/pages/products/Products.css
@@ -3,6 +3,13 @@
   position: relative;
   overflow: hidden;
 }
+.p-bg {
+  background: url("../../assets/img-home/home-sfondo.png") no-repeat center
+    center;
+  background-size: cover;
+  height: 650px; /* Adjust height as needed */
+  /* z-index: -1; */
+}
 .p-header {
   text-align: center;
   /* Add more styling as needed, such as background color, font size, etc. */
