--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
   font-family: "Montserrat", sans-serif;
+  box-sizing: border-box;
 }
 
 body {
@@ -9,16 +10,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 a {
   text-decoration: none;
   color: black;
 }
-
-* {
-  box-sizing: border-box;
+p {
+  text-align: justify;
 }
