--- a/src/pages/products/Products.css
+++ b/src/pages/products/Products.css
@@ -1,11 +1,11 @@
 .p {
   min-height: 100vh;
-  position: relative;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
 }
 .p-bg {
-  background: url("../../assets/img-home/home-sfondo.png") no-repeat center
-    center;
+  background: url("../../assets/img-home/home-sfondo.png");
   background-size: cover;
   height: 650px; /* Adjust height as needed */
   /* z-index: -1; */
