--- a/src/pages/sheets/Sheets.css
+++ b/src/pages/sheets/Sheets.css
@@ -1,14 +1,14 @@
 .ts {
   min-height: 100vh;
-  position: relative;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
 }
 .ts-bg {
-  background: url("../../assets/img-home/home-sfondo.png") no-repeat center
-    center;
+  background: url("../../assets/img-home/home-sfondo.png");
   background-size: cover;
   height: 650px; /* Adjust height as needed */
-  z-index: -1;
+  /* z-index: -1; */
 }
 .ts-wrapper {
   display: flex;
