--- a/src/pages/navigation/Navigation.css
+++ b/src/pages/navigation/Navigation.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 50px;
+  padding: 50px 50px;
   position: absolute;
   width: 100%;
   z-index: 10;
@@ -23,12 +23,12 @@
   padding: 20px 40px;
   color: white;
 }
-.link h3 {
+.link h4 {
   font-weight: normal; /* Normal font weight for non-active links */
   /* other styles */
 }
 
-.link h3.active {
+.link h4.active {
   font-weight: bold; /* Bold font weight for active link */
 }
 .link:hover {
@@ -72,7 +72,8 @@
     justify-content: center;
     align-items: center;
     padding: 0;
-    z-index: 1000; /* High z-index to stay on top of other content */
+    z-index: 10;
+    transition: 0.5s all ease;
   }
   .navbar#close .links {
     display: none;
