--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -36,6 +36,9 @@
   border: 1px solid white;
 }
 /* Carosello */
+.h-carosello {
+  padding: 3em;
+}
 .h-carosello img {
   margin-top: 30px;
   gap: 10px;
@@ -50,7 +53,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 10em;
-  margin: 30px;
+  margin: 20px;
   gap: 10px;
 }
 .h-quality-left {
@@ -84,7 +87,7 @@
   color: black;
 }
 
-/* Prossimo blocco */
+/* Blocco per prezzi e spedizioni */
 .h-priceShipTags {
   display: flex;
   justify-content: center;
@@ -109,6 +112,32 @@
 .h-priceShipTags-image {
   margin: 50px;
   width: 50%;
+}
+
+/* Blocco per analisi */
+.h-analysis {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: url("../../assets/img-home/sfondo-analysis.png");
+  background-size: cover;
+  padding: 5em 10em;
+  color: white;
+  align-items: center;
+}
+.h-analysis h1 {
+  text-align: left;
+}
+.h-analysis-types {
+  display: flex;
+  gap: 15em;
+}
+.h-analysis-left,
+.h-analysis-right {
+  flex: 1;
+  margin: 20px 0;
+  padding: 35px;
+  background-color: var(--dark-green);
 }
 
 /* Responsive design: Stacks blocks on smaller screens */
