--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -52,8 +52,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 10em;
-  margin: 20px;
+  margin: 3%;
+  padding: 0 10%;
   gap: 10px;
 }
 .h-quality-left {
@@ -81,7 +81,7 @@
 }
 .h-product-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Creates two columns */
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px; /* Space between cards */
   margin: 50px 180px;
   color: black;
@@ -93,8 +93,8 @@
   justify-content: center;
   align-items: center;
   gap: 100px;
-  margin: 30px;
-  padding: 0 10em;
+  margin: 5% 0;
+  padding: 0 10%;
 }
 .h-priceShipTags:nth-child(2n) {
   flex-direction: row-reverse;
@@ -110,8 +110,8 @@
   flex: 1;
 }
 .h-priceShipTags-image {
-  margin: 50px;
-  width: 50%;
+  margin: 5%;
+  width: 60%;
 }
 
 /* Blocco per analisi */
@@ -121,7 +121,8 @@
   justify-content: center;
   background: url("../../assets/img-home/sfondo-analysis.png");
   background-size: cover;
-  padding: 5em 10em;
+  margin: 0;
+  padding: 5% 10%;
   color: white;
   align-items: center;
 }
@@ -130,7 +131,7 @@
 }
 .h-analysis-types {
   display: flex;
-  gap: 15em;
+  gap: 15%;
 }
 .h-analysis-left,
 .h-analysis-right {
@@ -145,12 +146,23 @@
   .h-top p {
     padding: 20px 10%;
   }
-  .h-block1,
-  .h-block2 {
-    flex-direction: row; /* Side by side on larger screens */
+  .h-quality {
+    flex-direction: column;
   }
-  .h-block2-left1,
-  .h-block2-right1 {
-    flex-direction: row;
+  .h-product-grid {
+    grid-template-columns: repeat(1, 1fr);
+    margin: 40px 80px;
+  }
+  .h-priceShipTags {
+    flex-direction: column;
+  }
+  .h-priceShipTags:nth-child(2n) {
+    flex-direction: column;
+  }
+  .h-analysis {
+    flex-direction: column;
+  }
+  .h-analysis-types {
+    flex-direction: column;
   }
 }
